--- a/style.css
+++ b/style.css
@@ -1,34 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 *{
     margin: 0%;
     padding: 0%;
 }
-@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 body{
     font-family: 'Oswald', sans-serif;
 }
 .header-section{
     display: flex;
-    overflow: hidden;
     justify-content: space-between;
     background-color: #dfe6e9;
     height: 600px;
 }
 h1{
-    font-size: 50px;
+    font-size: 55px;
     font-weight: 700;
     color:  #34495e;
 }
 .bg-color{
-    color: #c0392b;
+    color: #e84118;
 }
 .first-half{
     width: 40%;
     margin: 5%;
     padding: 2%;
 }
-.first-half h1:nth-child(1){
-    margin-top: 100px;
+.first-half img{
+    width: 100%;
 }
+
 .first-half p{
     color: #7f8c8d;
     margin-top: 30px;
@@ -44,7 +44,6 @@ h1{
 .section-two{
     margin-top: 60px;
     display: flex;
-    overflow: hidden;
     background-image: url(images/Frame58.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -74,7 +73,6 @@ h2{
     display: flex;
     overflow: hidden;
     justify-content: space-between;
-    margin-bottom: 100px;
     background-color: rgba(223, 228, 234, .3);
 }
 .third-half{
@@ -93,5 +91,39 @@ h2{
 .third-half:nth-child(3){
     margin-right: 7%;
 }
+.follower-option{
+    width: 85%;
+    height: 200px;
+    border-radius: 15px;
+    border: 10px solid white;
+    box-shadow: 5px 5px 60px #dcdde1;
+    display: flex;
+    justify-content: space-between;
+    margin: 7%;
+}
+.follower-option div{
+    margin:0 auto;
+     margin-top: 60px;
+}
 
+
+
+
+.footer-area{
+  background-color: #0B0D17;
+  height: 200px;
+}
+
+
+.footer-area h3{
+    color: #718093;
+   font-size: 25px;
+   padding-top: 50px;
+   padding-bottom: 35px;
+   text-align: center;
+}
+.footer-area p{
+    color: white;
+    text-align: center;
+}
 
