--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .header-section{
     display: flex;
     justify-content: space-between;
-    background-color: #dfe6e9;
+    background-color: #dfe6e933;
     height: 600px;
 }
 h1{
@@ -31,14 +31,15 @@ h1{
 
 .first-half p{
     color: #7f8c8d;
+    font-size: 18px;
     margin-top: 30px;
-    margin-bottom: 45px;
+    margin-bottom: 60px;
 }
 .anchor-button{
     text-decoration: none;
     color: white;
-    background-image: linear-gradient(45deg,#6a89cc,#0a3d62);
-    padding: 15px 35px;
+    background-image: linear-gradient(50deg,#6a89cc,#0a3d62);
+    padding: 18px 40px;
     border-radius: 25px;
 }
 .section-two{
@@ -67,23 +68,22 @@ h2{
 }
 .second-half p{
     color: #84817a;
-    margin-bottom: 35px;
+    margin-bottom: 60px;
 }
 .food-recipe{
     display: flex;
-    overflow: hidden;
     justify-content: space-between;
-    background-color: rgba(223, 228, 234, .3);
+    background-color: rgba(223, 228, 234, .2);
 }
 .third-half{
     width: 23%;
-    border-radius: 20px;
+    border-radius: 25px;
     border: 15px solid #ffffff;
     box-shadow: 30px 20px 40px #dcdde1;
 }
 .third-half img{
     width: 100%;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 .third-half:nth-child(1){
     margin-left: 7%;
@@ -92,34 +92,32 @@ h2{
     margin-right: 7%;
 }
 .follower-option{
-    width: 85%;
-    height: 200px;
-    border-radius: 15px;
-    border: 10px solid white;
-    box-shadow: 5px 5px 60px #dcdde1;
     display: flex;
     justify-content: space-between;
+    width: 85%;
+    height: 200px;
+    border-radius: 20px;
+    border: 10px solid white;
+    box-shadow: 5px 5px 60px #dcdde1; 
     margin: 7%;
 }
 .follower-option div{
     margin:0 auto;
-     margin-top: 60px;
+     margin-top: 40px;
 }
 .footer-area{
   background-color: #0B0D17;
   height: 200px;
 }
-
-
 .footer-area h3{
     color: #718093;
    font-size: 25px;
-   padding-top: 50px;
-   padding-bottom: 35px;
+   padding: 50px;
    text-align: center;
 }
 .footer-area p{
     color: white;
     text-align: center;
+    margin-bottom: 50px;
 }
 
