--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     justify-content: space-between;
     background-color: #dfe6e933;
     height: 600px;
+    overflow: hidden;
 }
 h1{
     font-size: 55px;
@@ -49,6 +50,7 @@ h1{
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
+    overflow: hidden;
 }
 h2{
     color: #6ab04c;
@@ -105,6 +107,26 @@ h2{
     margin:0 auto;
      margin-top: 40px;
 }
+.food-images{
+     overflow: hidden;
+     margin-bottom: 40px;
+     margin-left: 100px;    
+}
+.food-images h3{
+    color: #16a085;
+   font-size: 25px;
+   text-align: center;
+   margin-bottom: 40px;
+}
+.food-picture{
+    width: 32%;
+    float: left;
+    margin-bottom: 20px;
+}
+.food-picture img{
+    width: 90%;
+    border-radius: 20px;
+}
 .footer-area{
   background-color: #0B0D17;
   height: 200px;
@@ -120,4 +142,5 @@ h2{
     text-align: center;
     margin-bottom: 50px;
 }
+
 
